--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,16 +1,16 @@
 <% content_for :banner do %>
 <div class="page-head">
   <div class="container">
-    <h3>Check Out</h3>
+    <h3>Cart</h3>
   </div>
 </div>
 <% end %>
 <!-- //banner -->
-<!-- check out -->
+<!-- Cart -->
 <% content_for :content do %>
 <div class="shopping-cart">
   <%= render "shopping_cart" %>
 </div>
 <% end %>
-<!-- //check out -->
+<!-- //Cart -->
 <!-- //product-nav -->
