--- a/app/views/order_items/update.js.erb
+++ b/app/views/order_items/update.js.erb
@@ -1,2 +1,3 @@
 $(".top_nav_right").html("<%= escape_javascript(render 'layouts/cart') %>")
 $(".shopping-cart").html("<%= escape_javascript(render 'carts/shopping_cart') %>")
+$(".notice").html("<%= escape_javascript(render 'layouts/message') %>")
