--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -29,21 +29,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="left-side-inner">
         <!--sidebar nav start-->
         <ul class="nav nav-pills nav-stacked custom-nav">
-          <li class="active"><a href="index.html"><i class="lnr lnr-power-switch"></i><span>Dashboard</span></a></li>
+          <li><a href="<%= admin_root_path %>"><i class="lnr lnr-power-switch"></i><span>Dashboard</span></a></li>
           <li>
-            <a href="#"><i class="lnr lnr-cog"></i>
-                <span>Components</span></a>
+            <a href="<%= admin_products_path %>"><i class="lnr lnr-shirt"></i>
+                <span>Products</span></a>
           </li>
-          <li><a href="forms.html"><i class="lnr lnr-spell-check"></i> <span>Forms</span></a></li>
-          <li><a href="tables.html"><i class="lnr lnr-menu"></i> <span>Tables</span></a></li>
-          <li><a href="#"><i class="lnr lnr-envelope"></i> <span>MailBox</span></a>
-          </li>
-          <li><a href="#"><i class="lnr lnr-indent-increase"></i> <span>Menu Levels</span></a>
-          </li>
-          <li><a href="codes.html"><i class="lnr lnr-pencil"></i> <span>Typography</span></a></li>
-          <li><a href="media.html"><i class="lnr lnr-select"></i> <span>Media Css</span></a></li>
-          <li><a href="#"><i class="lnr lnr-book"></i>  <span>Pages</span></a>
-          </li>
+          <li><a href="<%= admin_orders_path %>"><i class="lnr lnr-cart"></i> <span>Orders</span></a></li>
+          <li><a href="tables.html"><i class="lnr lnr-users"></i> <span>Users</span></a></li>
+          <li><a href="tables.html"><i class="lnr lnr-database"></i> <span>Back up</span></a></li>
         </ul>
         <!--sidebar nav end-->
       </div>
@@ -63,12 +56,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li class="dropdown profile_details_drop">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     <div class="profile_img">
-                      <span style="background:url(/assets/admin/1.jpg) no-repeat center"> </span>
+                      <span style="background:url() no-repeat center"> </span>
                       <div class="user-name">
-                        <p>Michael<span>Administrator</span></p>
+                        <p>Nhan<span>Administrator</span></p>
                       </div>
-                      <i class="lnr lnr-chevron-down"></i>
-                      <i class="lnr lnr-chevron-up"></i>
                       <div class="clearfix"></div>
                     </div>
                   </a>
@@ -85,221 +76,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <!--notification menu end -->
       </div>
       <!-- //header-ends -->
-      <div id="page-wrapper">
-        <div class="graphs">
-          <div class="col_3">
-            <div class="col-md-3 widget widget1">
-              <div class="r3_counter_box">
-                <i class="fa fa-mail-forward"></i>
-                <div class="stats">
-                  <h5>45 <span>%</span></h5>
-                  <div class="grow">
-                    <p>Growth</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3 widget widget1">
-              <div class="r3_counter_box">
-                <i class="fa fa-users"></i>
-                <div class="stats">
-                  <h5>50 <span>%</span></h5>
-                  <div class="grow grow1">
-                    <p>New Users</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3 widget widget1">
-              <div class="r3_counter_box">
-                <i class="fa fa-eye"></i>
-                <div class="stats">
-                  <h5>70 <span>%</span></h5>
-                  <div class="grow grow3">
-                    <p>Visitors</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3 widget">
-              <div class="r3_counter_box">
-                <i class="fa fa-usd"></i>
-                <div class="stats">
-                  <h5>70 <span>%</span></h5>
-                  <div class="grow grow2">
-                    <p>Profit</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="clearfix"> </div>
-          </div>
-          <!-- switches -->
-          <div class="switches">
-            <div class="col-4">
-              <div class="col-md-4 switch-right">
-                <div class="switch-right-grid">
-                  <div class="switch-right-grid1">
-                    <h3>TODAY'S STATS</h3>
-                    <p>Duis aute irure dolor in reprehenderit.</p>
-                    <ul>
-                      <li>Earning: $400 USD</li>
-                      <li>Items Sold: 20 Items</li>
-                      <li>Last Hour Sales: $34 USD</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="sparkline">
-                  <canvas id="line" height="150" width="480" style="width: 480px; height: 150px;"></canvas>
-                  <script>
-                  var lineChartData = {
-                    labels: ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Mon"],
-                    datasets: [{
-                      fillColor: "#fff",
-                      strokeColor: "#F44336",
-                      pointColor: "#fbfbfb",
-                      pointStrokeColor: "#F44336",
-                      data: [20, 35, 45, 30, 10, 65, 40]
-                    }]
-
-                  };
-                  new Chart(document.getElementById("line").getContext("2d")).Line(lineChartData);
-                  </script>
-                </div>
-              </div>
-              <div class="col-md-4 switch-right">
-                <div class="switch-right-grid">
-                  <div class="switch-right-grid1">
-                    <h3>MONTHLY STATS</h3>
-                    <p>Duis aute irure dolor in reprehenderit.</p>
-                    <ul>
-                      <li>Earning: $5,000 USD</li>
-                      <li>Items Sold: 400 Items</li>
-                      <li>Last Hour Sales: $2,434 USD</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="sparkline">
-                  <canvas id="bar" height="150" width="480" style="width: 480px; height: 150px;"></canvas>
-                  <script>
-                  var barChartData = {
-                    labels: ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Mon", "Tue", "Wed", "Thu"],
-                    datasets: [{
-                        fillColor: "#8BC34A",
-                        strokeColor: "#8BC34A",
-                        data: [25, 40, 50, 65, 55, 30, 20, 10, 6, 4]
-                      },
-                      {
-                        fillColor: "#8BC34A",
-                        strokeColor: "#8BC34A",
-                        data: [30, 45, 55, 70, 40, 25, 15, 8, 5, 2]
-                      }
-                    ]
-
-                  };
-                  new Chart(document.getElementById("bar").getContext("2d")).Bar(barChartData);
-                  </script>
-                </div>
-              </div>
-              <div class="col-md-4 switch-right">
-                <div class="switch-right-grid">
-                  <div class="switch-right-grid1">
-                    <h3>ALLTIME STATS</h3>
-                    <p>Duis aute irure dolor in reprehenderit.</p>
-                    <ul>
-                      <li>Earning: $80,000 USD</li>
-                      <li>Items Sold: 8,000 Items</li>
-                      <li>Last Hour Sales: $75,434 USD</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="sparkline">
-                  <!--graph-->
-                  <!--//graph-->
-                  <script>
-                  $(document).ready(function() {
-
-                    // Graph Data ##############################################
-                    var graphData = [{
-                      // Returning Visits
-                      data: [
-                        [4, 4500],
-                        [5, 3500],
-                        [6, 6550],
-                        [7, 7600],
-                        [8, 4500],
-                        [9, 3500],
-                        [10, 6550],
-                      ],
-                      color: '#FFCA28',
-                      points: { radius: 7, fillColor: '#fff' }
-                    }];
-
-                    // Lines Graph #############################################
-                    $.plot($('#graph-lines'), graphData, {
-                      series: {
-                        points: {
-                          show: true,
-                          radius: 1
-                        },
-                        lines: {
-                          show: true
-                        },
-                        shadowSize: 0
-                      },
-                      grid: {
-                        color: '#fff',
-                        borderColor: 'transparent',
-                        borderWidth: 10,
-                        hoverable: true
-                      },
-                      xaxis: {
-                        tickColor: 'transparent',
-                        tickDecimals: false
-                      },
-                      yaxis: {
-                        tickSize: 1200
-                      }
-                    });
-
-                    // Graph Toggle ############################################
-                    $('#graph-bars').hide();
-
-                    $('#lines').on('click', function(e) {
-                      $('#bars').removeClass('active');
-                      $('#graph-bars').fadeOut();
-                      $(this).addClass('active');
-                      $('#graph-lines').fadeIn();
-                      e.preventDefault();
-                    });
-
-                    $('#bars').on('click', function(e) {
-                      $('#lines').removeClass('active');
-                      $('#graph-lines').fadeOut();
-                      $(this).addClass('active');
-                      $('#graph-bars').fadeIn().removeClass('hidden');
-                      e.preventDefault();
-                    });
-
-                  });
-                  </script>
-                  <div id="graph-wrapper">
-                    <div class="graph-container">
-                      <div id="graph-lines"> </div>
-                      <div id="graph-bars"> </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-          </div>
-          <!-- //switches -->
-        </div>
-        <!--body wrapper start-->
-      </div>
-      <!--body wrapper end-->
-    </div>
+      <%= yield :content %>
     <!-- main content end-->
   </section>
   <!-- Bootstrap Core JavaScript -->
