--- a/app/views/admin/providers/_new_provider.html.erb
+++ b/app/views/admin/providers/_new_provider.html.erb
@@ -7,7 +7,7 @@
           <h4 class="modal-title">Add new provider</h4>
         </div>
         <div class="modal-body">
-          <form id="new_provider" class="form-horizontal new_provider" accept-charset="UTF-8" action="#" method="post">
+          <form id="new_provider" class="form-horizontal new_provider" accept-charset="UTF-8" action="/admin/providers" method="post">
             <%= hidden_field_tag :authenticity_token,form_authenticity_token %>
             <div class="form-group">
               <label class="control-label col-sm-2" for="provider_name">Name:</label>
