--- a/app/views/admin/categories/_new_category.html.erb
+++ b/app/views/admin/categories/_new_category.html.erb
@@ -7,12 +7,18 @@
           <h4 class="modal-title">Add new category</h4>
         </div>
         <div class="modal-body">
-          <form id="new_category" class="form-horizontal new_category" accept-charset="UTF-8" action="#" method="post">
+          <form id="new_category" class="form-horizontal new_category" accept-charset="UTF-8" action="/admin/categories" method="post">
             <%= hidden_field_tag :authenticity_token,form_authenticity_token %>
             <div class="form-group">
               <label class="control-label col-sm-2" for="category_name">Name:</label>
               <div class="col-sm-10">
                 <input class="form-control" id="category_name_name" type="text" name="category[name]" value="" required="">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="category_name">Category type(0-men's wear/1-women's wear/2-wathces):</label>
+              <div class="col-sm-10">
+                <input class="form-control" id="category_name_name" type="text" name="category[cate_type]" value="" required="">
               </div>
             </div>
             <div class="modal-footer">
