--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -20,10 +20,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="left-side sticky-left-side">
       <!--logo and iconic logo start-->
       <div class="logo">
-        <h1><a href="index.html"><span>Admin</span></a></h1>
-      </div>
-      <div class="logo-icon text-center">
-        <a href="index.html"><i class="lnr lnr-home"></i> </a>
+        <h1><a href="<%= admin_root_path %>"><span>Admin</span></a></h1>
       </div>
       <!--logo and iconic logo end-->
       <div class="left-side-inner">
@@ -80,9 +77,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- main content end-->
   </section>
   <!-- Bootstrap Core JavaScript -->
-  <footer>
-    <p>&copy 2015 Easy Admin Panel. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">w3layouts.</a></p>
-  </footer>
   <div class="notice">
     <%=render "layouts/message.html.erb"%>
   </div>
