--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -71,7 +71,7 @@
               </ul>
           </li>
           <li class=" menu__item"><a class="menu__link" href="#">About</a></li>
-          <li class=" menu__item"><a class="menu__link" href="#">contact</a></li>
+          <li class=" menu__item"><a class="menu__link" href="/contact">contact</a></li>
           </ul>
         </div>
         </div>
