--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <ul>
       <li><span class="glyphicon glyphicon-time" aria-hidden="true"></span>Free and Fast Delivery</li>
       <li><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>Free shipping On all orders</li>
-      <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:info@example.com">info@example.com</a></li>
+      <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:coldwind1911@gmail.com">coldwind1911@gmail.com</a></li>
     </ul>
   </div>
 </div>
