--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -34,10 +34,13 @@
               $("#price-min").val("$" + ui.values[0]);
               $("#price-max").val("$" + ui.values[1]);
               slideFilter(ui.values[0],ui.values[1]);
+            },
+            change: function(event, ui){
+              slideFilter(ui.values[0],ui.values[1]);
             }
           });
-          $("#price-min").val("$" + $("#slider-range").slider("values",0));
-          $("#price-max").val("$" + $("#slider-range").slider("values",1));
+          $("#price-min").val($("#slider-range").slider("values",0));
+          $("#price-max").val($("#slider-range").slider("values",1));
 
         }); //]]>
         function slideFilter(min, max){
@@ -50,6 +53,14 @@
             else $(this).parent().parent().parent().parent().parent().parent().hide();
           });
         }
+        $("#price-min").change(function(){
+          if($.isNumeric($(this).val()))
+            $("#slider-range").slider("values",0,$("#price-min").val());
+        });
+        $("#price-max").change(function(){
+          if($.isNumeric($(this).val()))
+            $("#slider-range").slider("values",1,$("#price-max").val());
+        });
         </script>
         <!---->
       </div>
